# Langmuir-Probe

./: .gitignore  README.md  analysis_marisol.ipynb  analysis_marisol.py  constants.py  exec.py  lafram.csv  lp_analysis.ipynb
analysis_LR/: Trace_10p8mTorr_400W_1.csv  Trace_10p8mTorr_400W_2.csv  Trace_10p8mTorr_400W_5.csv  Trace_13p9mTorr_600W_3.csv  Trace_13p9mTorr_600W_5.csv  Trace_16p6mTorr_1000W_5.csv  Trace_17p5mTorr_800W_1.csv  Trace_40p8mTorr_400W_6in_1.csv  (+65 more)
langmuir_lib_dev/langmuir/: pyproject.toml
langmuir_lib_dev/langmuir/src:/langmuir_LRingstad:/: Trace_16p6mTorr_1000W_1.csv  Trace_16p6mTorr_1000W_2.csv  Trace_16p6mTorr_1000W_4.csv  Trace_17p5mTorr_800W_5.csv  Trace_40p8mTorr_400W_6in_2.csv  Trace_40p9mTorr_400W_4in_3.csv  Trace_41p0mTorr_400W_5.csv  Trace_41p1mTorr_600W_1.csv  Trace_41p1mTorr_600W_4.csv  Trace_41p2mTorr_800W_4in_2.csv  Trace_41p3mTorr_400W_2in_3.csv  Trace_41p3mTorr_600W_2in_3.csv  Trace_41p3mTorr_800W_2in_2.csv  Trace_41p5mTorr_800W_4.csv  Trace_41p5mTorr_800W_5.csv  Trace_41p6mTorr_1000W_2in_3.csv  Trace_72p5mTorr_400W_4 (1).csv  Trace_72p5mTorr_400W_5.csv  Trace_73p5mTorr_600W_3 (1).csv  Trace_74p3mTorr_800W_5.csv  Trace_75p1mTorr_1000W_1.csv  Trace_75p1mTorr_1000W_2.csv  Trace_75p1mTorr_1000W_4.csv  Trace_96p8mTorr_400W_2.csv  Trace_97p0mTorr_400W_6in_3.csv  Trace_97p5mTorr_800W_2.csv  Trace_97p8mTorr_400W_2in_2.csv  Trace_98p0mTorr_600W_4in_3.csv  Trace_98p1mTorr_800W_6in_1.csv  Trace_98p2mTorr_800W_2in_3.csv  Trace_98p4mTorr_800W_4in_1.csv  Trace_98p4mTorr_800W_4in_2.csv  basic.py  compute.py  eedf.py  test.ipynb
(+47 files in other folders)
