[project]
name = "langmuir"
version = "0.0.1"
authors = [
  { name="Linus Ringstad", email="linussr2@illinois.edu" },
]
description = "Package for langmuir probe analysis."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/LinusRingstad/Langmuir"
Issues = "https://github.com/LinusRingstad/Langmuir/issues"